syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/field_behavior.proto";
import "protoc-gen-gorm/options/gorm.proto";
import "mwitkow/go-proto-validators/validator.proto";

package task.service.v1;
option go_package = "./pb";

// Example User
message User {
    option (gorm.opts) = {
        ormable:true,
        table: "users",
    };
    uint64 id = 1 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).tag = {primary_key: true not_null: true}];
    string username = 2 [(google.api.field_behavior) = REQUIRED, (validator.field) = {msg_exists : true}, (gorm.field).tag = {unique: true not_null: true}];
    string password = 3 [(google.api.field_behavior) = REQUIRED, (validator.field) = {msg_exists : true}, (gorm.field).tag = {not_null: true}];
    string role = 4 [(validator.field) = {msg_exists : true}, (gorm.field).tag = {default: "user" not_null: true}];
    google.protobuf.Timestamp created_at = 5 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp updated_at = 6 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp deleted_at = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message Task {
    option (gorm.opts) = {
        ormable:true,
        table: "tasks",
    };
    uint64 TaskID = 1 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).tag = {primary_key: true not_null: true}];
    string type = 2 [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    
    enum statuses{
        Pending = 0;
        Draft = 1;
        Returned = 2;
        Approved = 3;
        Rejected = 4;
    }
    statuses status = 3 [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    
    enum steps{
        Maker = 0;
        Checker = 1;
        Signer = 2;
        Releaser = 3;
    }
    steps step = 4 [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    
    uint64 createdByID = 5 [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    uint64 lastApprovedByID = 6 [(google.api.field_behavior) = OPTIONAL];
    uint64 lastRejectedByID = 7 [(google.api.field_behavior) = OPTIONAL];

    google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message CompanyTask {
    option (gorm.opts) = {
        ormable:true,
        table: "company_tasks",
    };
    uint64 TaskID = 1 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).tag = {primary_key: true not_null: true}];
    string type = 2  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    string data = 3  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];

    Task task = 51 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).belongs_to = { foreignkey: "task_id" }];

    google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message AnnouncementTask {
    option (gorm.opts) = {
        ormable:true,
        table: "announcement_tasks",
    };
    uint64 TaskID = 1 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).tag = {primary_key: true not_null: true}];
    string type = 2  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    string data = 3  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];

    Task task = 51 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).belongs_to = { foreignkey: "task_id" }];

    google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];
}

message AccountTask {
    option (gorm.opts) = {
        ormable:true,
        table: "account_tasks",
    };
    uint64 TaskID = 1 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).tag = {primary_key: true not_null: true}];
    string type = 2  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];
    string data = 3  [(google.api.field_behavior) = REQUIRED, (gorm.field).tag = { not_null: true}];

    Task task = 51 [(google.api.field_behavior) = OUTPUT_ONLY, (gorm.field).belongs_to = { foreignkey: "task_id" }];

    google.protobuf.Timestamp createdAt = 101 [(google.api.field_behavior) = OUTPUT_ONLY];
    google.protobuf.Timestamp updatedAt = 102 [(google.api.field_behavior) = OUTPUT_ONLY];
}
